[dependency-groups]
dev = [
  "pre-commit",
  "deptry"
]

[project]
authors = [
  {name = "Benjamin Cretois", email = "benjamin.cretois@nina.no"},
  {name = "Francesco Frassinelli", email = "francesco.frassinelli@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "ctranslate2==4.4.0",
  "faiss-cpu>=1.11.0.post1",
  "faster-whisper>=1.2.0",
  "langchain>=0.3.27",
  "langchain-community>=0.3.27",
  "openai>=1.99.1",
  "streamlit>=1.47.1",
  "tiktoken>=0.9.0",
  "torch>=2.7.1"
]
description = "Whisper UI"
license = {text = "GPL-3.0+"}
name = "whisperui"
readme = "README.md"
requires-python = ">=3.10,<3.13"
version = "0.1.0"

[tool.deptry]
# Ignore unused dependencies that are needed for the application but not directly imported
ignore = ["DEP002"]  # temporarly fix

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
[tool.uv]

[[tool.uv.index]]
explicit = true
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"

# https://docs.astral.sh/uv/guides/integration/pytorch/
[tool.uv.sources]
torch = [
  {index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'"}
]
